x.y.z
=====

New features:

* Add Spanish translation

Bug fixes:

Other:

2.6.0
=====

New features:

* Add support for .ALZ drag'n'drop

Other:

* Build Windows build with CMake

2.5.0
=====

New features:

* Middle-button support for selection rects

* Fix GitHub Issue #151: Default custom colors
  - Harmonizes color picker dialog between platforms

Other:

* Fix GitHub Issue #154: Do not deselect nodes on screen click
  - A modifier key (Shift, Ctrl) is now required to clear the selected group

2.4.0
=====

New features:

* Fix GitHub Issue #78: Add optional autosave
  - Autosave can be enabled in the settings menu

Bug fixes:

* Fix GitHub Issue #150: Ghost handles crash
* Fix GitHub Issue #148: Instant node creation not aligned with the grid

Other:

* Refactor dialogs to use more standard components
* Move settings menu action to file menu and remove settings menu

2.3.0
=====

New features:

* Fix GitHub Issue #140: Double-click to create a new node
* Add setting to select node group by intersection

Bug fixes:

* Fix GitHub Issue #143: Inexact node selection
  - Make connecting nodes by dragging easier
  - Render node handles as separate scene objects

Other:

* Fix GitHub Issue #125: Add support for Qt 6

2.2.0
=====

New features:

* Fix GitHub Issue #126: Extending limit of the canvas/background
  - The drawing area is now unlimited

* Fix GitHub Issue #128: Make it possible to connect selected nodes
  - Nodes can be connected in the selection order via Edit menu

* Fix GitHub Issue #133: Make it possible to disconnect selected nodes
  - Selected nodes can be disconnected via Edit menu

Bug fixes:

* Fix the way a node is selected on right-click

* Fix copy paste from background context menu

* Disable optimization buttons when optimization in progress

* Don't create Text element if edge text is empty

* Don't create Text element if node text is empty

Other:

* Make a distinction between general colors and node colors
