@@ -5,6 +5,8 @@ New features:
 
 * Add Spanish translation
 
+* Fix GitHub Issue #129: Add search field
+
 Bug fixes:
 
 Other:
